--- a/_posts/2018-05-26-Aichen100天.md
+++ b/_posts/2018-05-26-Aichen100天.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      日记
+title:      爱晨日记
 subtitle:   
 date:       2018-05-23
 author:     CDX
@@ -17,7 +17,9 @@ tags:
 我的电脑上的QQ和微信在安装PGP时强制重启之后一直神经，无法启动，而且报防火墙错误。刚开始还会弹出一个对话框说无法建立socket连接，手动沮丧ε=(´ο｀*)))唉。
 我尝试过去关机重启初始化服务，关闭防火墙等无效措施，都没有奏效。很丧，但是今天回来之后就直接在网上提出了我的问题，并bing。
 ### 万幸 找到了解决的方法 
+```
     就是使用这个命令：netsh winsock reset
     必须是管理员权限命令行执行哦
+```
 很开心，愉快的在重启电脑之后登上了QQ和微信
 心里那叫一个激动啊。
