--- a/_posts/.Archive/2018-05-31-centos搭建gitlab.md/2018-05-31 11-19-49.md
+++ b/_posts/.Archive/2018-05-31-centos搭建gitlab.md/2018-05-31 11-19-49.md
@@ -22,21 +22,21 @@ yum-config-manager --enable docker-ce-edge
 yum-config-manager --enable docker-ce-test
 yum install docker-ce-17.12.0.ce
 ```
-####centos启动docker
+centos启动docker
 ```
 systemctl start docker
 ```
-####修改ssh的端口设置，将Port设置为没有占用的端口。例如：10022 
+修改ssh的端口设置，将Port设置为没有占用的端口。例如：10022 
 ```
 vim  /etc/sshd/ssh_config
 ```
-####使新设置的端口生效
+使新设置的端口生效
 ```
 semanage port -a -t ssh_port_t -p tcp 15678
 firewall-cmd --permanent --add-port=15678/tcp
 firewall-cmd --reload 
 ```
-####运行gitlab：
+运行gitlab：
 ```
 docker run \
     --publish 443:443 --publish 80:80 --publish 22:22 \
@@ -46,14 +46,5 @@ docker run \
     --volume /u1/gitlab/data:/var/opt/gitlab \
     gitlab/gitlab-ce
 ```
-####浏览器中输入宿主机IP登录即可
-####比较基础的几个docker命令
-```
-docker ps //查看当前运行docekr
-docker images ls //查看镜像
-docker container ls //查看容器
-docker container stop id //关闭容器
-docker container rm id //删除容器
-docker run id //运行：
-```
+浏览器中输入宿主机IP登录即可
 参考链接：https://juejin.im/post/5a4c9ff36fb9a04507700fcc
