--- a/_posts/.Archive/2018-05-31-centos搭建gitlab.md/2018-05-31 11-23-09.md
+++ b/_posts/.Archive/2018-05-31-centos搭建gitlab.md/2018-05-31 11-23-09.md
@@ -54,6 +54,6 @@ docker images ls //查看镜像
 docker container ls //查看容器
 docker container stop id //关闭容器
 docker container rm id //删除容器
-docker run id //运行：
+docker run id //
 ```
 参考链接：https://juejin.im/post/5a4c9ff36fb9a04507700fcc
