--- a/_posts/.Archive/2018-06-03-利用python实现网易云歌单下载.md/2018-06-03 17-46-43.md
+++ b/_posts/.Archive/2018-06-03-利用python实现网易云歌单下载.md/2018-06-03 17-46-43.md
@@ -11,7 +11,7 @@ tags:
 ---
 #前言
     最近有一项作业很有意思，软件体系结构需要我们自己实现一个C/S架构的系统，对于没有单独实现过系统的人来说这真是项艰难的任务。
-根据自己的经验当然是面向github编程了，呃呃，是这样的。找到了一个模板，就借鉴模板，完成了下载网易云歌单的小程序。
+根据自己的经验当然是面向github编程了，呃呃，是这样的。找到了一个模板，就借鉴中完成了下载网易云歌单的小程序。
 ```
 import re
 import requests
