--- a/_posts/.Archive/2018-06-03-利用python实现网易云歌单下载.md/2018-06-03 17-51-33.md
+++ b/_posts/.Archive/2018-06-03-利用python实现网易云歌单下载.md/2018-06-03 17-51-33.md
@@ -22,11 +22,11 @@ import os
 def catchpageinfo(url):
 head_value = { 'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_2) AppleWebKit/537.36\
 (KHTML, like Gecko) Chrome/40.0.2214.115 Safari/537.36'}
-#利用request获得page_text
+# 利用request获得page_text
 page_info = requests.get(url,headers = head_value)
 res = r'<ul class="f-hide">(.*?)</ul>'
 contents = page_info.text
-#print page_info.text
+# print page_info.text
 song_list = re.findall(res, contents, re.S | re.M)
 if (song_list):
 contents = song_list[0]
@@ -77,9 +77,9 @@ def download_song(url):
 minimumsize = 10
 songdir = ensure_download_dir_exist()
 
-#url = re.sub( "#/", "", sys.argv[1] ).strip()
-#print url
-#url = 'https://music.163.com/#/playlist?id=97476391
+# url = re.sub( "#/", "", sys.argv[1] ).strip()
+# print url
+# url = 'https://music.163.com/#/playlist?id=97476391
 song_names = catchpageinfo(url)
 aartistName = ''
 print url
@@ -134,21 +134,22 @@ download_song("https://music.163.com/playlist?id=2246298053")
 ```
 ### 然后就简单的加了个小界面
 ```
+# coding=utf-8
 import Tkinter
 from catchpage import download_song
 
 class FindLocation( object ):
     def __init__(self):
-        #创建主窗口,用于容纳其它组件
+        # 创建主窗口,用于容纳其它组件
         self.root = Tkinter.Tk()
-        #self.root.geometry('500x300+500+200')
-        #给主窗口设置标题内容
+        # self.root.geometry('500x300+500+200')
+        # 给主窗口设置标题内容
         self.root.title( "网易歌单高清下载" )
-        #创建一个输入框,并设置尺寸
+        # 创建一个输入框,并设置尺寸
         self.url_input = Tkinter.Entry( self.root, width=40 )
-        #创建一个回显列表
+        # 创建一个回显列表
         self.display_info = Tkinter.Listbox( self.root, width=50 )
-        #创建一个查询结果的按钮
+        # 创建一个查询结果的按钮
         self.result_button = Tkinter.Button( self.root, command=self.find_position, text="下载歌曲" )
 
     # 完成布局
