--- a/_posts/.Archive/2018-06-07-Cisco-Orders.md/2018-06-08 08-35-47.md
+++ b/_posts/.Archive/2018-06-07-Cisco-Orders.md/2018-06-08 08-35-47.md
@@ -168,33 +168,5 @@ description 1M Line to RouteC
 no shutdown
 Ctrl + z
 config terminal
-ip route 192.168.2.0 255.255.255.0 10.0.0.1
-ip route 192.168.3.0 255.255.255.0 10.0.2.2
-Ctrl + z
-config terminal
-route rip
-network 10.0.0.0
-network 10.0.2.0
-network 192.168.1.0
-Ctrl + z
-config terminal
-router ospf 1
-network 10.1.0.0 0.0.3.255 area0
-network 192.168.0.0 0.0.3.255 area0
-Ctrl + z
-```
-## 扩展访问列表及配置
-```
-configure terminal
-access-list 101 permit tcp 192.168.1.0 0.0.0.255 any eq www
-access-list 101 permit tcp 192.168.1.0 0.0.0.255 any eq ftp
-access-list 101 permit tcp 192.168.1.0 0.0.0.255 any eq smtp
-access-list 101 permit tcp 192.168.1.0 0.0.0.255 any eq pop3
-access-list 102 permit tcp any host 192.168.2.1 eq www
-access-list 102 permit tcp any host 192.168.2.2 eq ftp
-access-list 102 permit tcp any host 192.168.2.1 eq smtp
-interface Serial1
-ip access-group 101 out
-interface Ethernet0
-ip access-group 102 out
+ip route 192.168.2.0 
 ```
