--- a/_posts/.Archive/2018-06-07-Cisco-Orders.md/2018-06-08 08-50-17.md
+++ b/_posts/.Archive/2018-06-07-Cisco-Orders.md/2018-06-08 08-50-17.md
@@ -190,11 +190,5 @@ access-list 101 permit tcp 192.168.1.0 0.0.0.255 any eq www
 access-list 101 permit tcp 192.168.1.0 0.0.0.255 any eq ftp
 access-list 101 permit tcp 192.168.1.0 0.0.0.255 any eq smtp
 access-list 101 permit tcp 192.168.1.0 0.0.0.255 any eq pop3
-access-list 102 permit tcp any host 192.168.2.1 eq www
-access-list 102 permit tcp any host 192.168.2.2 eq ftp
-access-list 102 permit tcp any host 192.168.2.1 eq smtp
-interface Serial1
-ip access-group 101 out
-interface Ethernet0
-ip access-group 102 out
+access-list 102 permit tcp 
 ```
