--- a/_posts/.Archive/2018-06-07-Cisco-Orders.md/2018-06-08 09-04-07.md
+++ b/_posts/.Archive/2018-06-07-Cisco-Orders.md/2018-06-08 09-04-07.md
@@ -29,14 +29,14 @@ ip address address netmask
 ```
 enable
 config t
-hostname aichen
-enable secret aichen123
-interface vlan 1
-ip address 192.168.10.3 255.255.255.0
-ip default-gateway 192.168.10.1
-end
-write
-exit
+ hostname aichen
+ enable secret aichen123
+ interface vlan 1
+ ip address 192.168.10.3 255.255.255.0
+ ip default-gateway 192.168.10.1
+ end
+ write
+ exit
 ```
 ## 查看交换机命令
 ```
@@ -76,7 +76,7 @@ write
 exit
 show interface fa0/1
 ```
-## VLAN基本配置 示例
+## VLAN基本配置
 ```
 enable
 config t
@@ -154,7 +154,7 @@ router ospf Process_ID
 network IP_address wildmask area number
 show ip ospf
 ```
-## 路由器配置 示例
+## 路由器配置
 ```
 config terminal
 interface FastEthernet0/0
